[workspace]
members = ["crates/felt"]


[workspace.package]
repository = "http://github.com/sai-starknet/sai-starknet-rs"
edition = "2021"
license = "MIT"
authors = ["Bengineer <blockengineer42@gmail.com>"]

[workspace.dependencies]
assert_matches = "1.5.0"
bincode = { version = "2.0.0", features = ["serde"] }
pretty_assertions_sorted = "1.2.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
starknet = "0.17.0"
starknet-types-core = "0.2.0"

[workspace.lints.rust]
# Deny unsafe code unless explicitly allowed
unsafe_code = "warn"
