[package]
name = "sai-felt"
version = "0.1.0"
description = "Starknet types in formats optimized for serialization and deserialization."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
starknet = { workspace = true, optional = true }
starknet-types-core = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions_sorted.workspace = true
assert_matches.workspace = true
serde_json.workspace = true
bincode.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true

[features]
default = ["serde"]
field = ["dep:starknet-types-core"]
serde = ["dep:serde"]
