[package]
name = "sai-starknet-provider"
version = "0.16.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"
description = ""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[dependencies]
async-trait.workspace = true
auto_impl.workspace = true
ethereum-types.workspace = true
flate2.workspace = true
log.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, default-features = true }
worker = { version = "0.5.0", optional = true }

sai-starknet-types.workspace = true
sai-felt.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }

[dev-dependencies]
sai-starknet-provider = { path = ".", features = ["no_unknown_fields"] }
sai-felt = { workspace = true, features = ["field"] }
starknet.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = []
no_unknown_fields = ["sai-starknet-types/no_unknown_fields"]

[lints]
workspace = true
