[package]
name = "sai-starknet-types"
version = "0.1.0"
description = "Starknet types in formats optimized for serialization and deserialization."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sai-felt.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["alloc", "macros"] }
serde_json.workspace = true
num-traits = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
base64 = { workspace = true, features = ["alloc"] }
crypto-bigint = { workspace = true }
sha3 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
hex-literal.workspace = true
bincode = "1.3.3"

[features]
default = ["std"]
std = []
no_unknown_fields = []
